# norikey

./: Cargo.toml  README.md  config.example.yaml  config.sensitive.example.yaml  deploy.sh
scripts/: check_ykman.sh  run_remote_share_dev.sh
server/: generate_remote_signing_seed.php  remote_share.php
src/: cli.rs  config.rs  main.rs  policy.rs  session.rs  session_helpers.rs
src/factors/: brain.rs  dead_sector.rs  hardware.rs  mod.rs  remote.rs  stego.rs  yubikey.rs
src/panic/: linux.rs  macos.rs
src/vault/: crypto.rs  header.rs  mod.rs  secret.rs  share.rs
