[package]
name = "norikey"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0"
argon2 = "0.5.3"
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"] }
hmac = "0.12.1"
image = "0.24"
libc = "0.2"
obfstr = "0.4"
pcsc = "2.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha1 = "0.10.6"
sha2 = "0.10.8"
sharks = "0.5.0"
thiserror = "2.0"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
getrandom = "0.2"